--- a/package.json
+++ b/package.json
@@ -15,5 +15,10 @@
   "bugs": {
     "url": "https://github.com/AgtLucas/wild-world/issues"
   },
-  "homepage": "https://github.com/AgtLucas/wild-world#readme"
+  "homepage": "https://github.com/AgtLucas/wild-world#readme",
+  "dependencies": {
+    "prop-types": "^15.5.10",
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1"
+  }
 }
